--- a/build.gradle
+++ b/build.gradle
@@ -28,3 +28,14 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+test {
+    testLogging {
+        events "passed", "skipped", "failed"
+        showExceptions true
+        exceptionFormat "full"
+        showCauses true
+        showStackTraces true
+        showStandardStreams = true
+    }
+}
