--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.3.8'
     id 'io.spring.dependency-management' version '1.1.7'
+    id "org.springdoc.openapi-gradle-plugin" version "1.9.0"
 }
 
 group = 'example'
